--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: Avenka;
-    src: url("/AvenirNext.otf") format("opentype");
+    src: url("./AvenirNext.otf") format("opentype");
 }
 body{
 	font-family: Avenka;
