--- a/src/pages/print/page.module.css
+++ b/src/pages/print/page.module.css
@@ -1,3 +1,8 @@
 .cont {
     @apply container mx-auto
 }
+.fileContainer{
+    width: 180px;
+    border: 2px solid black;
+    @apply flex flex-col items-center gap-2 rounded-md p-2 justify-center text-center;
+}
